[UPDATE] Add attribution

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,10 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Attribution -->
+    <a
+      href="https://www.flaticon.com/free-icons/partnership-cooperation"
+      title="partnership cooperation icons"
+      >Partnership cooperation icons created by panjiulum.id - Flaticon</a
+    >
+    <a href="https://www.flaticon.com/free-icons/default" title="default icons"
+      >Default icons created by Nuricon - Flaticon</a
+    >
+    <a
+      href="https://www.freepik.com/free-vector/geometric-background_15091283.htm#query=simple%20background&position=23&from_view=keyword&track=ais_user&uuid=434e8cd8-550a-4374-b009-99f53db32135"
+      >Image by VecMes</a
+    >
+    on Freepik
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Cognito Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
